# hatel

./: .gitignore  Cargo.toml  README.en.md  README.ko.md  README.md
.claude/skills/hatel/: SKILL.md
.github/workflows/: ci.yml  lint.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: claude_settings.rs  doctor.rs  init.rs  main.rs  serve.rs  service.rs  throttle.rs
crates/cli/src/export/: exporter.rs  mod.rs  transform.rs
crates/cli/src/otlp/: accumulator.rs  decode.rs  mod.rs
crates/core/: Cargo.toml  core.toml
crates/core/src/: config.rs  cost.rs  export.rs  hook.rs  lib.rs  model.rs  pii.rs  project.rs  registry.rs  render.rs  report.rs  rolling.rs  schema.rs  session.rs
crates/core/src/sink/: jsonl.rs  mod.rs  sqlite.rs
crates/core/tests/: integration.rs
crates/hook/: Cargo.toml
crates/hook/src/: main.rs
plugins/: example.toml
scripts/: install.sh  uninstall.sh
