[package]
name = "hatel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "hatel_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
jiff.workspace = true
regex.workspace = true
blake3.workspace = true
etcetera.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
toml.workspace = true
jiff.workspace = true
rusqlite.workspace = true
