[package]
name = "hatel-hook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# The hook entrypoint. Depends on `core` only — no async runtime, no HTTP stack —
# so it cold-starts in single-digit milliseconds when spawned on every event.
[[bin]]
name = "hatel-hook"
path = "src/main.rs"

[dependencies]
hatel-core = { path = "../core" }
